--- a/learn-certs-pr/d365-fundamentals-customer-engagement-apps-crm/index.yml
+++ b/learn-certs-pr/d365-fundamentals-customer-engagement-apps-crm/index.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Fundamentals Customer Engagement Apps (CRM)'
+title: 'Microsoft Certified: Dynamics 365 Fundamentals (CRM)'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Fundamentals Customer Engagement Apps (CRM)'
+  title: 'Microsoft Certified: Dynamics 365 Fundamentals (CRM)'
   description: 'Wenn Sie mit Geschäftsabläufen sowie Kundenbeziehungsmanagement (CRM) vertraut sind und über IT-Kenntnisse verfügen – enweder allgemein oder durch Berufserfahrung – nutzen Sie diese Zertifizierung, um diese Fähigkeiten hervorzuheben. Überprüfen Sie, ob Sie die Kundenbindungsfunktionen von Dynamics 365 umfassend kennen, um Ihre Karriere zu fördern.'
 uid: certification.d365-fundamentals-customer-engagement-apps-crm
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
@@ -52,7 +52,7 @@ resources:
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAmVj
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungslernpfad
   description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I
