--- a/learn-certs-pr/exams/mb-910.yml
+++ b/learn-certs-pr/exams/mb-910.yml
@@ -1,16 +1,14 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Fundamentals Customer Engagement Apps (CRM) (beta)
+title: Microsoft Dynamics 365 Fundamentals (CRM)
 metadata:
-  title: 'Exam MB-910: Microsoft Dynamics 365 Fundamentals Customer Engagement Apps (CRM) (beta)'
-  description: 'Exam MB-910: Microsoft Dynamics 365 Fundamentals Customer Engagement Apps (CRM) (beta)'
+  title: 'Exam MB-910: Microsoft Dynamics 365 Fundamentals (CRM)'
+  description: 'Exam MB-910: Microsoft Dynamics 365 Fundamentals (CRM)'
 uid: exam.mb-910
 displayName: MB-910
 summary: |-
-  Diese Prüfung behandelt die Funktionen und Fähigkeiten von Microsoft Dynamics 365-Apps zur Kundenbindung.
+  Diese Prüfung behandelt die Funktionen und Möglichkeiten von Microsoft Dynamics 365-Apps zur kundenbindung.
   
   Kandidaten für diese Prüfung sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einem Informationstechnologie (IT)-Umfeld verfügen. Sie sollten auch ein grundlegendes Verständnis der Prinzipien der Kundenbindung und des Geschäftsbetriebs haben.
-  
-  <div><br/><font color='red'><strong>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Erfahren Sie mehr über den Wert und die Bedeutung von Beta-Prüfungen</a>.</strong></font></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, Folgendes zu beschreiben: Dynamics 365 Marketing; Dynamics 365 Sales; Dynamics 365-Kundenservice; Dynamics 365-Außendienst; Projektbetrieb und gemeinsame Funktionen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JIev
@@ -51,7 +49,7 @@ resources:
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
