--- a/learn-certs-pr/d365-fundamentals-finance-and-operations-apps-erp/index.yml
+++ b/learn-certs-pr/d365-fundamentals-finance-and-operations-apps-erp/index.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Fundamentals Finance and Operations Apps (ERP)'
+title: 'Microsoft Certified: Dynamics 365 Fundamentals (ERP)'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Fundamentals Finance and Operations Apps (ERP)'
+  title: 'Microsoft Certified: Dynamics 365 Fundamentals (ERP)'
   description: 'Wenn Sie einen umfassenden Einblick in die ERP-Funktionen (Enterprise Resource Planning) von Dynamics 365 haben und die Grundlagen der Integration von Finanz- und Betriebsanwendungen in das gesamte Microsoft-Ökosystem kennen, ist diese Zertifizierung genau das Richtige für Sie.'
 uid: certification.d365-fundamentals-finance-and-operations-apps-erp
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
@@ -15,7 +15,7 @@ summary: |-
   - Technische Fachleute und Entscheidungsträger in Unternehmen, die untersuchen, wie sich die Dynamics 365-Funktionalität in die von ihnen verwendeten Apps integrieren lässt
   - Geschäftsinteressenten und andere Personen, die Dynamics 365 verwenden und nachweisen möchten, dass sie die Grundlagen der Plattform verstehen
   - Entwickler, die ein tieferes Verständnis für Geschäftsabläufe, Finanzen und ERP zeigen möchten
-  - Studenten, Absolventen und Personen, die ihre Karriere ändern und Dynamics 365-Apps für Finanzen und Betrieb nutzen möchten, um auf die nächste Ebene zu gelangen
+  - Studenten, vorige Absolventen und Personen, die ihre Karriere ändern und die Dynamics 365 Finance and Operations App optimal nutzen möchten, um auf die nächste Ebene zu gelangen
 subTitle: 'Wenn Sie einen umfassenden Einblick in die ERP-Funktionen (Enterprise Resource Planning) von Dynamics 365 haben und die Grundlagen der Integration von Finanz- und Betriebsanwendungen in das gesamte Microsoft-Ökosystem kennen, ist diese Zertifizierung genau das Richtige für Sie.'
 levels:
 - beginner
@@ -35,6 +35,8 @@ type: fundamentals
 products: 
 - dynamics-365
 - dynamics-finance-operations
+courses:
+- uid: course.mb-920t00
 paths:
 - uid: learn.wwl.explore-microsoft-dynamics-365-supply-chain-management
 - uid: learn.wwl.explore-microsoft-dynamics-365-finance
@@ -53,7 +55,7 @@ resources:
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAWQX
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungslernpfad
   description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAFfQ
