--- a/learn-certs-pr/exams/mb-920.yml
+++ b/learn-certs-pr/exams/mb-920.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Fundamentals Finance and Operations Apps (ERP) (beta)
+title: Microsoft Dynamics 365 Fundamentals (ERP)
 metadata:
-  title: 'Exam MB-920: Microsoft Dynamics 365 Fundamentals Finance and Operations Apps (ERP) (beta)'
-  description: 'Exam MB-920: Microsoft Dynamics 365 Fundamentals Finance and Operations Apps (ERP) (beta)'
+  title: 'Exam MB-920: Microsoft Dynamics 365 Fundamentals (ERP)'
+  description: 'Exam MB-920: Microsoft Dynamics 365 Fundamentals (ERP)'
 uid: exam.mb-920
 displayName: MB-920
 summary: |-
@@ -10,11 +10,10 @@ summary: |-
   
   Kandidaten für diese Prüfung sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einem Informationstechnologie (IT)-Umfeld verfügen. Sie sollten auch ein grundlegendes Verständnis der Finanzprinzipien der und des Geschäftsbetriebs haben.
   
-  <div><br/><font color='red'><strong>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Erfahren Sie mehr über den Wert und die Bedeutung von Beta-Prüfungen</a>.</strong></font></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, Folgendes zu beschreiben: Dynamics 365 Supply Chain Management, Dynamics Finance, Dynamics 365 Commerce, Dynamics 365 Human Resources, Projektabläufe und gemeinsame Funktionen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JFBT
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-920&examname=Exam%20MB-920:%20Microsoft%20Dynamics%20365%20Fundamentals%20Finance%20and%20Operations%20Apps%20(ERP)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-920
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-920&examname=Exam%20MB-920:%20Microsoft%20Dynamics%20365%20Fundamentals%20(ERP)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-920
 locales:
 - en
 levels:
@@ -34,6 +33,8 @@ roles:
 products:
 - dynamics-365
 - dynamics-finance-operations
+courses:
+- uid: course.mb-920t00
 paths:
 - uid: learn.wwl.explore-microsoft-dynamics-365-supply-chain-management
 - uid: learn.wwl.explore-microsoft-dynamics-365-finance
@@ -49,7 +50,7 @@ resources:
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAFfQ
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
