--- a/learn-certs-pr/exams/sc-300.yml
+++ b/learn-certs-pr/exams/sc-300.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: 'Microsoft Identity and Access Administrator (Sicherheitsprüfung Beta)'
+title: 'Microsoft Identity and Access Administrator'
 metadata:
-  title: 'Exam SC-300: Microsoft Identity and Access Administrator (Sicherheitsprüfung Beta)'
-  description: 'Exam SC-300: Microsoft Identity and Access Administrator (Sicherheitsprüfung Beta)'
+  title: 'Exam SC-300: Microsoft Identity and Access Administrator'
+  description: 'Exam SC-300: Microsoft Identity and Access Administrator'
 uid: exam.sc-300
 displayName: SC-300
 summary: |-
@@ -10,7 +10,6 @@ summary: |-
   
   Der Identitäts- und Zugriffsadministrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen im Unternehmen zusammen, um strategische Identitätsprojekte zur Modernisierung von Identitätslösungen, zur Implementierung hybrider Identitätslösungen und zur Implementierung von Identitäts-Governance voranzutreiben.
   
-  <div><br/><font color='red'><strong>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Erfahren Sie mehr über den Wert und die Bedeutung von Beta-Prüfungen</a>.</strong></font></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Implementierung einer Identitätsmanagementlösung; Implementierung einer Authentifizierungs- und Zugriffsverwaltungslösung; Implementieren der Zugriffsverwaltung für Apps. und eine Identitäts-Governance-Strategie planen und umsetzen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Myp5
@@ -46,10 +45,10 @@ relatedCertifications:
 resources:
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  href: https://aka.ms/traincertposter
 - title: Prüfungswiederholung
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
