--- a/learn-certs-pr/courses/dp-203t00.yml
+++ b/learn-certs-pr/courses/dp-203t00.yml
@@ -24,7 +24,7 @@ skillsGained:
 - skill: Führen Sie mit Azure Synapse Analytics End-to-End-Sicherheit durch
 - skill: Führen Sie eine Echtzeit-Stream-Verarbeitung mit Stream Analytics durch
 - skill: Erstellen Sie eine Stream-Verarbeitungslösung mit Event Hubs und Azure Databricks 
-- skill: Erstellen Sie Berichte mit Hilfe der Power BI-Integration mit Azure Synpase Analytics
+- skill: Erstellen Sie Berichte mit Hilfe der Power BI-Integration mit Azure Synapse Analytics
 - skill: Führen Sie integrierte maschinelle Lernprozesse in Azure Synapse Analytics durch
 learningPartnersLink: /learn/certifications/partners
 locales:
@@ -322,12 +322,12 @@ outlineSection: |-
   - Streaming-Daten mit strukturiertem Azure Databricks-Streaming zu verarbeiten
 
 
-  ### Modul 16&#58; Erstellen von Berichten mit Hilfe der Power BI-Integration mit Azure Synpase Analytics
+  ### Modul 16&#58; Erstellen von Berichten mit Hilfe der Power BI-Integration mit Azure Synapse Analytics
   In diesem Modul lernen die Teilnehmer, wie man Power BI in ihren Synapse-Arbeitsbereich integriert, um Berichte in Power BI zu erstellen. Die Teilnehmer erstellen eine neue Datenquelle und einen neuen Power BI-Bericht in Synapse Studio.Anschließend lernen die Teilnehmer, wie man die Abfrageleistung durch materialisierte Ansichten und Zwischenspeichern von Ergebnismengen verbessern kann. Schließlich werden die Teilnehmer das Datenmeer mit serverlosen SQL-Pools erkunden und Visualisierungen für diese Daten in Power BI erstellen.
   #### Lektionen
   - Erstellen Sie Berichte mit Power BI mit Hilfe der Integration in Azure Synapse Analytics
     
-  #### Lab&#58; Erstellen Sie Berichte mit Hilfe der PowerBI-Integration mit Azure Synpase Analytics
+  #### Lab&#58; Erstellen Sie Berichte mit Hilfe der PowerBI-Integration mit Azure Synapse Analytics
   - Integrieren Sie einen Azure Synapse-Arbeitsbereich und Power BI
   - Optimieren Sie die Integration mit Power BI
   - Verbessern Sie die Abfrageleistung mit materialisierten Ansichten und Caching von Ergebnismengen
